# tamanduauth-backend

./: .env  Cargo.toml  LICENSE  README.org  docker-compose.yml
migrations/: 20220316014352_create_validations.sql  20220316015243_create_users.sql
src/: main.rs
src/commands/: #register_user.rs#  .#register_user.rs  create_registration_request.rs  mod.rs  register_user.rs
src/commands/login/: mod.rs  password_authenticate_user.rs
src/commands/registration/: create_registration_request.rs  mod.rs  register_user.rs
src/controllers/: create_validation_request_ctrl.rs  mod.rs
src/controllers/login/: mod.rs  password_authenticate_user_ctrl.rs
src/controllers/registration/: create_validation_request_ctrl.rs  mod.rs  register_user_ctrl.rs
src/services/: mod.rs
src/services/domain/: mail.rs  mod.rs  user.rs  validation.rs
src/services/infra/: mail.rs  mod.rs  user.rs  validation.rs
