[package]
name = "tamanduauth-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid"] }
warp = "0.3"
bcrypt = "0.12"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1"
color-eyre = "0.6"
time = "0.3"
lettre = { version = "0.10.0-rc.4", features = ["tokio1-native-tls"] }
simple_logger = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt-simple = "0.10"
